Social network buttons wraped in links and fixed style

--- a/style/index.css
+++ b/style/index.css
@@ -100,20 +100,20 @@ body {
   color: white;
   margin-right: 7px;
 
-  box-shadow:inset 0px 1px 3px 0px #9fb4f2;
-	background:linear-gradient(to bottom, #7892c2 5%, #476e9e 100%);
-	background-color:#7892c2;
-	border-radius:5px;
-	border:1px solid #4e6096;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	padding:5px 11px;
-	text-decoration:none;
-	text-shadow:0px -1px 0px #032789;
+  box-shadow: inset 0px 1px 3px 0px #9fb4f2;
+  background: linear-gradient(to bottom, #7892c2 5%, #476e9e 100%);
+  background-color: #7892c2;
+  border-radius: 5px;
+  border: 1px solid #4e6096;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  padding: 5px 11px;
+  text-decoration: none;
+  text-shadow: 0px -1px 0px #032789;
 }
 
-main{
+main {
   top: 43px;
   position: relative;
 }
@@ -135,8 +135,33 @@ main{
   margin: 15px auto 25px auto;
 }
 
-.social-network-buttons i {
+.social-network-buttons a {
   margin-right: 10px;
+  text-decoration: none;
+  color: #000;
+  left: 4px;
+  position: relative;
+}
+.social-network-buttons ul {
+  list-style-type: none;
+  display: flex;
+  padding: 0;
+}
+
+.social-network-buttons li {
+  height: 25px;
+  width: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  border: 1px solid;
+  border-color: #eee;
+  background: #eee;
+  margin-right: 10px;
+}
+.social-network-buttons li:hover {
+  background: #ffffff;
 }
 
 .antenna-figure {
@@ -338,13 +363,11 @@ main{
 .section-grid {
   display: grid;
   grid-template-columns: 20% 20% 20% 20% 20%;
-  grid-template-rows: 20% 20% 20% 20% 20%;
+  grid-template-rows: 10%;
   width: 100%;
 }
 
 .section-item {
-  display: flex;
-  flex-direction: column;
   font-size: 12px;
 }
 
@@ -360,7 +383,7 @@ main{
   text-decoration: none;
 }
 
-.section-item a:hover {
+.section-item li:hover {
   color: #333;
   text-decoration: underline;
 }
